# kk-cpp

./: CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  vcpkg.json
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/kk/: CMakeLists.txt  kk.ixx
src/kk/partitions/: kk-world.ixx
src/utils/: CMakeLists.txt  utils.ixx
tests/: CMakeLists.txt
tests/kk/: CMakeLists.txt
tests/utils/: CMakeLists.txt
